# docker-for-datascience

./: .gitignore  LICENSE  README.md  dcontainers.sh  deverything.sh  dimages.sh  dinactive.sh  dvolumes.sh
Python Images/: counter.py
Python Images/Numpy Script/: Dockerfile  README.md
alphine_container/: Makefile
alpine_container/: Dockerfile  Makefile
bash_container/: Makefile
crontab-images/: daily_logger.py
crontab_images/: Dockerfile
dash_container/: Dockerfile  Makefile  app_basic.py  requirements.txt
dash_container/assets/: style.css
database_images/postgres/: Makefile  README.md
database_images/postgres_11/: Makefile
debian-images/: Dockerfile
fastapi/: Dockerfile  Makefile  READM.rst  main.py  pyproject.toml  requirements.txt
flask_container/: Dockerfile  Makefile  README.md  app.py  main.py  requirements.txt
go_container/: Dockerfile  Makefile  hello-world.go
grafana_container/: Makefile  README.md
influxdb_container/: Makefile  docker-compose.yaml  env.influxdb  sample.sql
jupyter_container/: Dockerfile  Makefile  requirements.txt
kafka_container/: Makefile  README.md
liquibase_container/: Makefile  README.md  docker-compose.yml
mssql_container/: Makefile  README.md  docker-compose.yaml
mysql_container/: Makefile  README.md  docker-compose.yaml
node_container/: Dockerfile
postgres_container/: Makefile  README.md
postgres_contaner/: Makefile
quantum_game/: Makefile
redis_container/: Makefile
scala_container/: Dockerfile  Makefile  README.md  build.sbt
timescale_container/: Makefile  README.md
(+49 files in other folders)
