[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.11.8"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
